--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Dain Lee">
+    <meta name="description" content="KakaoTalk Clone Project">
     <title>First HTML page</title>
+    <style>
+        body {background-color: powderblue;}
+        h1 {color: red;}
+        p {color: blue;}
+    </style>
   </head>
   <body>
-    권지용 마이노 이마크 사랑
-
+    <h1>권지용 마이노 이마크 사랑<h1>
+    <h2> 김채림 바보<h2>
+    <h3> 박채린 바보<h3>
+    <h4> 김민서 바보<h4>
+    <a href="https://www.youtube.com">youtube</a>
+    <a href="https://<www class="cusd"></www>8.org/hyde" target="_blank">Hyde MIddle School</a>
+    <ul>
+      <li> 리사 </li>
+      <li> 로제 </li>
+      <li> 지수 </li>
+      <li> 제니 </li>
+    </ul>
+    <ol>
+       <li>lisa</li>
+       <li>jisoo</li>
+       <li>rose</li>
+       <li>jennie</li>
+    </ol>
+    <img src="1.jpg" width="500" height="800">
+    <br>
+    <hr>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/89kTb73csYg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <form>
+       First Name: <input type="text"> <input type="submit">
+    </form>
+    <h2>I love <font color="pink">Blackpink</font><h2>
+    <h2>I love 이던<h2>
   </body>
 </html>
