--- a/layouts.html
+++ b/layouts.html
@@ -12,30 +12,53 @@
 
   p {border: 6px solid black;}
   span {border: 6px solid pink;} */
-  body, html {
+  /* body, html {
     padding: 0;
     margin: 0;
-    background-color: lavender;
+    background-color: pink;
     height: 100%;
   }
   .box {
     background-color: black;
     width: 50%;
     height: 50%;
-    padding: 50px 30px 15px 5px
+    padding: 50px 30px 15px 5px;
+    border-width: 3px;
+    border-color: purple;
+    border-style: dashed;
   }
   .inside-box {
     background-color:pink;
     width: 50%;
     height: 50%;
+  } */
+  div {
+    width: 300px;
+    height:300px;
+  }
+  #box1{
+    background-color: #e8a9be;
+    position: static;
+  }
+  #box2 {
+    background-color: #84b3d9;
+    position: fixed;
+    top:300px;
+  }
+  #box3 {
+    background-color: #c4de85;
+    position: absolute;
+    top: 600px;
   }
   </style>
 </head>
 <body>
-  <div class="box">
-    <div class="inside-box"></div>
+  <!-- <div class="box">
+    <div class="inside-box"></div> -->
     <!-- <p> BLACKPINK <span>LOVE</span> SQUARE UP</p> -->
-
-  </div>
+  <div id="box1">BLACKPINK</div>
+  <div id="box2">BIGBANG</div>
+  <div id="box3">NCT</div>
+  LOVE
 </body>
 </html>
